# crust-gather

./: .gitignore  .goreleaser.yaml  .goreleaser_hook.sh  .krew.yaml  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  crust-gather.sh  default.nix  flake.nix  install.sh  justfile  serve-artifact.sh  shell.nix
.github/: dependabot.yml
.github/workflows/: dependabot.yaml  nix-build.yaml  release.yaml  test.yaml
charts/crust-gather/: Chart.yaml  values.yaml
charts/crust-gather/templates/: NOTES.txt  _helpers.tpl  clusterrolebinding.yaml  job.yaml  secret-ca.yaml  secret-oci-auth.yaml  serviceaccount.yaml
docs/: release.md
hack/: go.mod  goreleaser.go
plugins/: crust-gather.yaml
scripts/: install-kwok.sh  release_new_tag.sh  release_new_version.sh  update_crate.sh
src/: cli.rs  filter.rs  lib.rs  main.rs  mcp_server.rs  resource.rs
src/filters/: filter.rs  group.rs  kind.rs  log.rs  mod.rs  name.rs  namespace.rs  selector.rs
src/gather/: config.rs  gather.rs  log.rs  mod.rs  printers.rs  reader.rs  representation.rs  selector.rs  server.rs  storage.rs  writer.rs
src/scanners/: dynamic.rs  events.rs  generic.rs  host_logs.rs  info.rs  interface.rs  logs.rs  mod.rs  nodes.rs  objects.rs  user_logs.rs  versions.rs
src/scanners/templates/: event-filter.html
src/tests/: kwok.rs  mod.rs
