[package]
name = "crust-gather"
version = "0.9.1"
edition = "2021"

[dependencies]
kube = { version = "1.1.0", features = ["ws"] }
k8s-openapi = { version = "0.25.0", features = ["latest"] }
tokio = { version = "1.47.1", features = ["full"] }
serde_yaml = "0.9.28"
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.42", features = ["derive"] }
anyhow = "1.0.98"
async-trait = "0.1.88"
tar = { version = "0.4.44", optional = true }
flate2 = { version = "1.1.2", optional = true }
zip = { version = "2.2.3", optional = true }
build_html = "2.6.0"
regex = "1.11.1"
futures = "0.3.31"
tokio-retry = "0.3.0"
duration-string = { version = "0.5.2", features = ["serde"] }
tokio-util = "0.7.15"
trait-set = "0.3.0"
actix-web = "4.11.0"
glob = "0.3.2"
http = "1.3.1"
serde_json_path = "0.7.2"
base64 = "0.22.1"
walkdir = "2.5.0"
logos = "0.15.0"
json-patch = "4.0.0"
jsonptr = "0.7.1"
async-stream = "0.3.6"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }

[features]
archive = ["dep:tar", "dep:flate2", "dep:zip"]

[dev-dependencies]
xid = "1.1.1"
tempdir = "0.3.7"
serial_test = "3.2.0"
serde_with = "3.14.0"

[profile.release]
strip = true
opt-level = "z"
codegen-units = 1

[[bin]]
name = "kubectl-crust-gather"
path = "src/main.rs"
