[package]
name = "crust-gather"
version = "0.11.0"
edition = "2024"

[dependencies]
kube = { version = "2.0.1", features = ["socks5", "ws"] }
k8s-openapi = { version = "0.26.0", features = ["latest"] }
tokio = { version = "1.47.1", features = ["full"] }
serde_yaml = "0.9.28"
serde = { version = "1.0.228", features = ["derive"] }
clap = { version = "4.5.48", features = ["derive"] }
anyhow = "1.0.100"
async-trait = "0.1.89"
tar = { version = "0.4.44", optional = true }
flate2 = { version = "1.1.2", optional = true }
zip = { version = "5.1.1", optional = true }
build_html = "2.7.0"
regex = "1.11.3"
futures = "0.3.31"
tokio-retry = "0.3.0"
duration-string = { version = "0.5.3", features = ["serde"] }
tokio-util = "0.7.16"
trait-set = "0.3.0"
actix-web = "4.11.0"
glob = "0.3.3"
http = "1.3.1"
serde_json_path = "0.7.2"
base64 = "0.22.1"
walkdir = "2.5.0"
logos = "0.15.1"
json-patch = "4.1.0"
jsonptr = "0.7.1"
async-stream = "0.3.6"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }

[features]
archive = ["dep:tar", "dep:flate2", "dep:zip"]

[dev-dependencies]
xid = "1.1.1"
tempdir = "0.3.7"
serial_test = "3.2.0"
serde_with = "3.15.0"
envtest = "0.0.1"

[profile.release]
strip = true
opt-level = "z"
codegen-units = 1

[[bin]]
name = "kubectl-crust-gather"
path = "src/main.rs"
