[package]
name = "crust-gather"
version = "0.11.1"
edition = "2024"

[dependencies]
kube = { version = "2.0.1", features = ["socks5", "ws"] }
k8s-openapi = { version = "0.26.1", features = ["latest"] }
tokio = { version = "1.49.0", features = ["full"] }
serde_yaml = "0.9.28"
serde = { version = "1.0.228", features = ["derive"] }
clap = { version = "4.5.53", features = ["derive"] }
anyhow = "1.0.100"
async-trait = "0.1.89"
tar = { version = "0.4.44"}
flate2 = { version = "1.1.5"}
zip = { version = "7.0.0"}
build_html = "2.7.0"
regex = "1.12.2"
futures = "0.3.31"
tokio-retry = "0.3.0"
duration-string = { version = "0.5.3", features = ["serde"] }
tokio-util = "0.7.18"
trait-set = "0.3.0"
actix-web = "4.12.1"
glob = "0.3.3"
http = "1.4.0"
serde_json_path = "0.7.2"
base64 = "0.22.1"
walkdir = "2.5.0"
logos = "0.16.0"
json-patch = "4.1.0"
jsonptr = "0.7.1"
async-stream = "0.3.6"
thiserror = "2.0.17"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
home = "=0.5.11"

[dev-dependencies]
xid = "1.1.1"
tempfile = "3.24.0"
serial_test = "3.3.1"
serde_with = "3.16.1"
envtest = "0.0.1"

[profile.release]
strip = true
opt-level = "z"
codegen-units = 1

[[bin]]
name = "kubectl-crust-gather"
path = "src/main.rs"
